<resources>
    <string name="app_name">ChitChatter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_notification_channel_id">CHITCHATTER_ID_DEFAULT</string>
    <string name="message_denied">Bạn không cho phép ứng dụng này thông báo.</string>
    <string name="message_permission_prompt">Bạn cần cấp quyền thông báo cho ứng dụng.</string>
    <string name="message_permission_denied">Bạn đã không cho phép ứng dụng thông báo.</string>
    <string name="gallery_denied">Bạn không cho phép ứng dụng truy cập vào thư viện.</string>
    <string name="camera_denied">Bạn không cho phép ứng dụng truy cập vào máy ảnh.</string>
    <string name="gallery_permission_prompt">Bạn cần cấp quyền truy cập vào thư viện cho ứng dụng.</string>
    <string name="camera_permission_prompt">Bạn cần cấp quyền truy cập vào máy ảnh cho ứng dụng.</string>
    <string name="camera_permission_denied">Bạn đã không cho phép ứng dụng truy cập vào thư viện.</string>
    <string name="desc_login_image">Ảnh logo\n</string>
    <string name="txt_enter_email">Nhập email</string>
    <string name="txt_enter_password">Nhập mật khẩu</string>
    <string name="txt_forget_password_ask">Quên mật khẩu?</string>
    <string name="txt_sign_in">Đăng nhập</string>
    <string name="txt_dont_have_an_account">Chưa có tài khoản?</string>
    <string name="txt_sign_up_here">Đăng ký tại đây</string>
    <string name="txt_enter_confirm_password">Nhập lại mật khẩu</string>
    <string name="txt_sign_up">Đăng ký</string>
    <string name="txt_have_an_account">Đã có tài khoản?</string>
    <string name="txt_sign_in_here">Đăng nhập tại đây</string>
    <string name="txt_confirm_email">Xác nhận email</string>
    <string name="txt_turn_back">Trở lại</string>
    <string name="txt_forget_password">Quên mật khẩu</string>
    <string name="txt_enter_username">Nhập username</string>
    <string name="txt_enter_display_name">Nhập tên hiển thị</string>
    <string name="title_message">Message</string>
    <string name="title_calls">Calls</string>
    <string name="title_contacts">Contacts</string>
    <string name="sender_avatar">Sender avatar</string>
    <string name="message">Ê mai đi học mobile không?</string>
    <string name="receiver_avatar">Receiver avatar</string>
    <string name="time">7:30 PM</string>
    <string name="sender_name">Nguyễn Quốc Toàn</string>
    <string name="example_email">nguyenquoctoan@gmail.com</string>
    <string name="avatar">Avatar</string>
    <string name="txtMess">Write a message</string>
    <string name="txtActiveNow">Active now</string>
    <string name="error_username">Username phải chứa ít nhất 3 ký tự và không có ký tự trống</string>
    <string name="error_display_name">Tên hiển thị không được để trống</string>
    <string name="error_email">Email không đúng định dạng</string>
    <string name="error_password">Mật khẩu phải có ít nhất 8 ký tự, gồm ít nhất 1 chữ cái và 1 chữ số</string>
    <string name="error_confirm_password">Mật khẩu xác nhận lại không trùng với mật khẩu!</string>
    <string name="message_require_correct_format">Yêu cầu nhập đủ và đúng định dạng dữ liệu.</string>
    <string name="message_wrong_email_password">Email hoặc mật khẩu không chính xác.</string>
    <string name="message_no_internet">Không có kết nối internet.</string>
    <string name="preference_account_key">com.midterm.chitchatter.current_account</string>
    <string name="preference_email_key">com.midterm.chitchatter.preference_email_key</string>
    <string name="preference_token_key">com.midterm.chitchatter.preference_token_key</string>
    <string name="preference_display_name_key">com.midterm.chitchatter.preference_display_name</string>
    <string name="preference_avt_url_key">com.midterm.chitchatter.preference_avt_url</string>
    <string name="msg_check_email_reset_password">Đã gửi link xác nhận đổi mật khẩu. Vui lòng kiểm tra email của bạn!</string>
    <string name="msg_check_email_signup">Đã gửi link xác nhận tài khoản. Vui lòng kiểm tra email của bạn!</string>
    <string name="msg_check_email_to_verify">Vui lòng kiểm tra email chúng tôi đã gửi để xác thực tài khoản!</string>
    <string name="msg_cant_send_email">Có lỗi xảy ra. Không gửi được email!</string>
    <string name="message_hi_there">hi there</string>
    <string name="desc_item_message_image">User avatar display in message item</string>
    <string name="desc_image_to_send">Image to send\n</string>
    <string name="example_header">A</string>
    <string name="txt_full_name_example">Trà My</string>
    <string name="txt_unknown">Không rõ</string>
    <string name="txt_full_email">Email:</string>
    <string name="txt_email_example">tram8319@gmail.com</string>
    <string name="text_display_name">Tên:</string>
    <string name="text_display_name_example">Trà My</string>
    <string name="txt_birthday">Ngày sinh:</string>
    <string name="text_birthdate_example">19/11/2003</string>
    <string name="text_gender">Giới tính:</string>
    <string name="txt_gender_example">Nữ</string>
    <string name="txt_unfriend">Hủy kết bạn</string>
    <string name="title_account">Thông tin</string>
    <string name="unknown_error">Có lỗi xảy ra!</string>
    <string name="txt_detail">Chi tiết</string>
    <string name="txt_action_connect">Kết nối</string>
    <string name="txt_cancel_connect">Hủy yêu cầu</string>
    <string name="txt_contact_request">Yêu cầu kết bạn</string>
    <string name="txt_accept">Chấp nhận</string>
    <string name="txt_deny">Từ chối</string>
    <string name="txt_edit">Cập nhật thông tin</string>
    <string name="txt_action_profile">Tài khoản</string>
    <string name="txt_action_logout">Đăng xuất</string>
    <string name="txt_action_noti">Thông báo</string>
    <string name="txt_man">Nam</string>
    <string name="txt_woman">Nữ</string>
    <string name="txt_save_profile">Lưu thay đổi</string>
    <string name="txt_enter_birthdate">Nhập ngày sinh</string>
    <string name="title_edit_profile">Cập nhật tài khoản</string>
    <string name="txt_error_name_blank">Họ tên không được để trống</string>
    <string name="txt_date_error">Ngày tháng không đúng định dạng</string>
    <string name="txt_change_avt">Change avatar</string>
    <string name="txt_update_profile_success">Cập nhật thành công!</string>
    <string name="txt_update_avatar_success">Cập nhật ảnh đại diện thành công</string>
    <string name="txt_title_contact_request">Yêu cầu kết nối</string>
    <string name="txt_empty_request">Không có yêu cầu nào</string>
    <string name="txt_count_unread">(0)</string>
</resources>