<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/spacing_sm">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_4"
        android:text="@string/txt_contact_request"
        android:textSize="@dimen/text_md"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_contact_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16"
        android:contentDescription="@string/txt_accept"
        android:src="@drawable/ic_user_accept"
        app:layout_constraintBottom_toBottomOf="@+id/tv_contact_email"
        app:layout_constraintEnd_toStartOf="@id/btn_contact_deny"
        app:layout_constraintTop_toTopOf="@+id/tv_contact_name" />

    <ImageView
        android:id="@+id/btn_contact_deny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_4"
        android:clickable="true"
        android:contentDescription="@string/txt_deny"
        android:focusable="true"
        android:src="@drawable/ic_user_deny"
        app:layout_constraintBottom_toBottomOf="@+id/btn_contact_accept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_contact_accept" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_contact_avt"
        android:layout_width="@dimen/avatar_w_md"
        android:layout_height="@dimen/avatar_w_md"
        android:layout_marginStart="@dimen/margin_4"
        android:src="@drawable/chitchatter"
        app:layout_constraintBottom_toBottomOf="@+id/tv_contact_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_contact_name" />

    <TextView
        android:id="@+id/tv_contact_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_md"
        android:layout_marginTop="@dimen/margin_4"
        android:layout_marginEnd="@dimen/margin_4"
        android:layout_weight="1"
        android:maxLines="1"
        android:text="@string/sender_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="@dimen/text_lg"
        app:layout_constraintEnd_toStartOf="@+id/btn_contact_accept"
        app:layout_constraintStart_toEndOf="@+id/iv_contact_avt"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tv_contact_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xs"
        android:layout_marginBottom="@dimen/margin_4"
        android:ellipsize="marquee"
        android:maxLines="1"
        android:text="@string/example_email"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="@dimen/text_md"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_contact_name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tv_contact_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_contact_name" />


</androidx.constraintlayout.widget.ConstraintLayout>