<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/img_size_200"
        android:layout_height="@dimen/img_size_200"
        android:layout_marginTop="@dimen/margin_48"
        android:contentDescription="@string/desc_login_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chitchatter" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_signup_mobile_username"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_32"
        android:layout_marginTop="@dimen/margin_48"
        android:layout_marginEnd="32dp"
        android:hint="@string/txt_enter_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_require_validation"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColorHint="@color/stroke"
            android:textSize="@dimen/text_size_small" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_signup_password"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:hint="@string/txt_enter_password"
        app:layout_constraintEnd_toEndOf="@+id/ti_signup_mobile_username"
        app:layout_constraintStart_toStartOf="@+id/ti_signup_mobile_username"
        app:layout_constraintTop_toBottomOf="@+id/ti_signup_mobile_username"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColorHint="@color/stroke"
            android:textSize="@dimen/text_size_small" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_signup_confirm_password"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:hint="@string/txt_enter_confirm_password"
        app:layout_constraintEnd_toEndOf="@+id/ti_signup_password"
        app:layout_constraintStart_toStartOf="@+id/ti_signup_password"
        app:layout_constraintTop_toBottomOf="@+id/ti_signup_password"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_unlock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_signup_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColorHint="@color/stroke"
            android:textSize="@dimen/text_size_small" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_signup_fragment_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32"
        android:backgroundTint="@color/primary_color"
        android:text="@string/txt_sign_up"
        android:padding="@dimen/padding_btn_12dp"
        app:layout_constraintEnd_toEndOf="@+id/ti_signup_confirm_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ti_signup_confirm_password"
        app:layout_constraintTop_toBottomOf="@+id/ti_signup_confirm_password"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_4"
        android:layout_marginTop="@dimen/margin_24"
        android:text="@string/txt_have_an_account"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btn_signup_fragment_login"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup_fragment_signup" />

    <Button
        android:id="@+id/btn_signup_fragment_login"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/txt_sign_in_here"
        android:textColor="@color/primary_color"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/label_require_validation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textColor="@color/primary_color"
        android:textAllCaps="true"
        android:textSize="@dimen/text_size_30"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>